--- a/main.tex
+++ b/main.tex
@@ -26,11 +26,15 @@
         \newpage
         \input{./content/03_beyond_gof.tex}
         \newpage
+        \input{./content/04_state.tex}
+        \newpage
         \input{./content/04_value.tex}
         \newpage
         \input{./content/06_checks.tex}
         \newpage
         \input{./content/07_meta.tex}
+        \newpage
+        \input{./content/06_frameworks.tex}
         \newpage
         %\input{./content/09_react_redux.tex}
         %\newpage
@@ -38,9 +42,10 @@
         %\newpage
         %\input{./content/11_spring.tex}
         \input{./content/12_boxing_killing.tex}
-        %\newpage
+        \newpage
         %\input{./content/14_shepard.tex}
-
+        %\newpage
+        \input{./content/80_relations.tex}
 
     \end{multicols*}
 \end{document}
