--- a/content/02_gof.tex
+++ b/content/02_gof.tex
@@ -86,7 +86,7 @@ Stelle \textcolor{blue}{Objekte in einer Baumstruktur} zusammen um Hierarchien d
     \item Es kann schwierig sein, eine gemeinsame Schnittstelle anzubieten
 \end{itemize}
 
-\subsection{Decorator (Structural)}
+\subsection{Decorator (Wrapper) (Structural)}
 
 \includegraphics[width=0.25\linewidth]{decorator-icon.png}
 
