--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,7 @@
         %\input{./content/14_shepard.tex}
         %\newpage
         \input{./content/80_relations.tex}
-
+        \newpage
+        \input{./content/81_posa.tex}
     \end{multicols*}
 \end{document}
